# site-manager

./: .dockerignore  .gitignore  .release-it.json  Dockerfile  README.md  compose.yml  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile  Rocket.toml  main.sqlite-shm  main.sqlite-wal  rustfmt.toml
backend/.sqlx/: query-1877bcbfcc63366b43d455012afdb181f89f9f54a7ba2051f3987eabc274738c.json  query-3345c5d42ff5d92db64c31eefdc405f2ca9c38146a66c38ad57c6fb3929d5089.json  query-52374624b99d4c9cff7332e086997795d69f6421e0e93cf858b042561dc1885a.json  query-679eaa6014828a85539d66a059e3ee8dfd10bb3f3546e213b7b8f24af9c16b59.json  query-711d79f72bd59b78fb8e3591d618cfaeb14519d26b26e035719154d6fcaaaafd.json  query-91a05e6787e96267bf907f5aed870347a37171a7a7bc39c34ade09e7ece81645.json  query-a6a3ad1c3b8adb88ee3edbf4a3480c1eaded15a9e6dad58db3fe30c2eb23f604.json  query-bfc701028d244384cc465476120e2103de3869a7b79fb2ee0a5e5508a180bb8f.json  query-c9a203b8132d986bc9996e8f712942d740aff401768b8375d776cb07962cd9ea.json  query-e2cc915d54ef6cd9ada1afae2f774f8a49e7b0e16461af0c0ed33cf355b428ce.json  query-f32dd2ba954368cb32f37d5d241db40309b886321782e6c3c73abdde5839ca7d.json
backend/migrations/: 0001_init_schema.sql  0002_initial_site_config.sql  1_init_schema.sql
backend/src/: main.rs
backend/src/fairings/: cors.rs  mod.rs  panda_node.rs
backend/src/infra/: cors.rs  db.rs  mod.rs  spa_server.rs
backend/src/panda_comms/: container.rs  fairing.rs  manual_discovery.rs  messages.rs  mod.rs  site_messages.rs  sites.rs
backend/src/repos/: entities.rs  helpers.rs  mod.rs  (+3 more)
(+60 files in other folders)
