[package]
name = "pibasho-backend"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
aquadoggo = "0.8.0"
p2panda-rs = "0.8.1"
rocket_cors = "0.6.0"
tokio-util = "0.7.10"
env_logger = "0.11.2"
log = "0.4.20"
docker-sync = "0.1.2"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]
