[package]
name = "site-manager"
version = "0.2.5"
edition = "2021"
publish = false

[dependencies]
rocket_cors = "0.6.0"
tokio-util = "0.7.10"
env_logger = "0.11.2"
log = "0.4.20"
p2panda-sync = "0.1.0"
p2panda-net = "0.1.0"
serde = "1.0.216"
p2panda-core = "0.1.0"
gethostname = "0.5.0"
p2panda-discovery = "0.1.0"
anyhow = "1.0.94"
rand = "0.8.5"
ciborium = "0.2.2"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7.4", features = ["macros", "migrate"] }
dotenvy = "0.15.7"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dev-dependencies]
sqlx-cli = { version = "0.7.4", default-features = false, features = ["sqlite"] }
